fixes alignment of share block in wire items

--- a/app/stylesheets/shared/_wire.css.sass
+++ b/app/stylesheets/shared/_wire.css.sass
@@ -119,7 +119,7 @@
       border: 1px solid #c3c3c3
       padding: 8px 10px
       height: 12px
-      width: 383px
+      width: 377px
       line-height: 14px
       
       &:focus
